--- a/My Resume/index.html
+++ b/My Resume/index.html
@@ -35,7 +35,7 @@
         <hr />
         <h2>Other</h2>
         <h3><a href="../Public/hobbies.html">Hobbies</a></h3>
-        <h3><a href="../Public/hobbies.html">Contact</a></h3>
+        <h3><a href="../Public/contact.html">Contact</a></h3>
         <hr />
         <footer>
             <h4><p>&#169 Moushmiya Tenish J M</p></h4>
